[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-class"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
description = "Generate multifunctional GUIs from classes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Hanjin Liu", email = "liuhanjin-sc@g.ecc.u-tokyo.ac.jp" },
]
dependencies = [
    "macro-kit>=0.4.6",
    "magicgui>=0.8.0",
    "qtpy>=1.10.0",
    "superqt[iconify]>=0.6.1",
    "docstring_parser>=0.15",
    "psygnal>=0.9.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
pyqt5 = ["pyqt5>=5.12.0"]
pyqt6 = ["pyqt6"]
pyside2 = [
    "pyside2>=5.15 ; python_version>='3.9'",
]
pyside6 = ["pyside6"]
testing = [
    "pytest",
    "pytest-qt",
    "pyqtgraph>=0.13.2",
    "vispy>=0.11.0",
    "dask",
    "numpy",
    "pandas>=2.2.3",
    "polars>=1.12.0",
]
docs = [
    "mkdocs",
    "mkdocs-autorefs==1.0.1",
    "mkdocs-material==9.5.23",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.25.2",
    "mkdocstrings-python==1.10.8",
    "mkdocs-gen-files==0.5.0",
    "numpy",
    "pyqt5>=5.12.0",
    "docutils>=0.17.1",
    "pyqtgraph>=0.13.2",
    "vispy>=0.11.0",
    "pandas>=2.1",
    "matplotlib>=3.8.2",
]

[project.urls]
Download = "https://github.com/hanjinliu/magic-class"

[tool.hatch.version]
path = "magicclass/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/magicclass"]
exclude = ["/examples", "/docs", "/tests", "setup.py"]

[tool.hatch.build.targets.sdist.force-include]
"magicclass/core.pyi" = "magicclass/core.pyi"
"magicclass/testing" = "magicclass/testing"

[tool.hatch.build.targets.wheel]
include = ["/magicclass"]
exclude = ["/examples", "/docs", "/tests", "setup.py"]

[tool.hatch.build.targets.wheel.force-include]
"magicclass/core.pyi" = "magicclass/core.pyi"
"magicclass/testing" = "magicclass/testing"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:qtpy",
    "ignore::DeprecationWarning:vispy",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]

[tool.hatch.envs.test]
features = ["testing"]

[tool.hatch.envs.test.scripts]
run = "pytest -v"

[[tool.hatch.envs.test.matrix]]
backend = ["pyqt5", "pyqt6"]

[tool.hatch.envs.test.overrides]
matrix.backend.features = [
    { value = "pyqt5", if = [
        "pyqt5",
    ] },
    { value = "pyqt6", if = [
        "pyqt6",
    ] },
]
